[package]
name = "probability_cli"
author = "Ben Greenberg"
description = "A command line interface for probability calculations using Bayesian probability"
repository = "https://github.com/bencgreenberg/probability-cli"
license = "MIT"
license-file = "LICENSE"
keyword = "probability, bayesian, cli"
readme = "README.md"
version = "0.0.1"
edition = "2021"

[dependencies]
colored = "2.0"
