[package]
name = "probability_cli"
authors = ["Ben Greenberg <ben.greenberg@gmail.com>"]
description = "A command line interface for probability calculations using Bayesian probability"
repository = "https://github.com/bencgreenberg/probability-cli"
license = "MIT"
keywords = ["bayesian", "probability", "calculator", "cli"]
readme = "README.md"
version = "0.0.2"
edition = "2021"

[dependencies]
colored = "2.0"
